--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Usage:
 Just enjoy.
 
 Contributing:
-Artsiom Bulakh, Rodion Rutkevich, Alexey Kozunov.</h1>
+Artsiom Bulakh, Rodion Rutkevich, Alexey Kozunov</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
