--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@ Sub modules:
 www.link.com.
 
 Usage:
-Just enjoy.
+Доступные возможности:
+
+- регистрация,
+- просмотр рецептов,
+- добавление рецептов в избранное,
+- добавление подписки,
+- оплата подписки,
+- создание рецепта,
+- подписки на людей,
+- список покупок,
+- оценка рецепта
 
 Contributing:
 Artsiom Bulakh, Rodion Rutkevich, Alexey Kozunov</h1>
