--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@ Usage:
 - подписки на людей,
 - список покупок,
 - оценка рецепта
+  
+  
+Рецепт:
+
+Добавить рецепт в избранное
+Создать рецепт
+Удалить рецепт
+Редактирование рецепта
+Добавить в список покупок
+
+Пользователь:
+  
+Регистрация
+Подписка
+Оплата
+Просмотр списка покупок
+Вход в систему
+Просмотр рецептов
 
 Contributing:
 Artsiom Bulakh, Rodion Rutkevich, Alexey Kozunov</h1>
