--- a/index.html
+++ b/index.html
@@ -1,51 +1,151 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Project Name:
-Roast Beef.
+<html lang="en" class="has-navbar-fixed-top">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Text</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  </head>
+  <body>
+    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+          <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+        </a>
 
-Description:
-Social network for cooking lovers. Alexey Kozunov. Alexexy Kozunov
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
 
-Installation:
-You just need to access the website.
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item is-size-4">
+            О системе
+          </a>
 
-Sub modules:
-www.link.com.
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link is-size-4">
+              Пользователь
+            </a>
 
-Usage:
-Доступные возможности:
+            <div class="navbar-dropdown">
+              <a class="navbar-item is-size-4">
+                Ключевые слова
+              </a>
+              <a class="navbar-item is-size-4">
+                Работа с личной библиотекой
+              </a>
+              <a class="navbar-item is-size-4">
+                Руководство для пользователей
+              </a>
+            </div>
+          </div>
 
-- регистрация,
-- просмотр рецептов,
-- добавление рецептов в избранное,
-- добавление подписки,
-- оплата подписки,
-- создание рецепта,
-- подписки на людей,
-- список покупок,
-- оценка рецепта
-  
-  
-Рецепт:
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link is-size-4">
+              Сервис
+            </a>
 
-Добавить рецепт в избранное
-Создать рецепт
-Удалить рецепт
-Редактирование рецепта
-Добавить в список покупок
+            <div class="navbar-dropdown">
+              <a class="navbar-item is-size-4">
+                Анализ текста
+              </a>
+              <a class="navbar-item is-size-4">
+                Сравнение двух текстов
+              </a>
+              <a class="navbar-item is-size-4">
+                Поиск по ключевым словам
+              </a>
+              <a class="navbar-item is-size-4">
+                Сентимент анализ
+              </a>
+            </div>
+          </div>
 
-Пользователь:
-  
-Регистрация
-Подписка
-Оплата
-Просмотр списка покупок
-Вход в систему
-Просмотр рецептов
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link is-size-4">
+              Сторонние пользователи
+            </a>
 
-Contributing:
-Artsiom Bulakh, Rodion Rutkevich, Alexey Kozunov</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+            <div class="navbar-dropdown">
+              <a class="navbar-item is-size-4">
+                Анализ курсовых работ, проектов и дипломов
+              </a>
+            </div>
+          </div>
+
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link is-size-4">
+              Администратор
+            </a>
+
+            <div class="navbar-dropdown">
+              <a class="navbar-item is-size-4">
+                Организация хранилищ
+              </a>
+              <a class="navbar-item is-size-4">
+                Просмотр статистики
+              </a>
+              <a class="navbar-item is-size-4">
+                Просмотр временного хранилища
+              </a>
+              <a class="navbar-item is-size-4">
+                Просмотр постоянного хранилища
+              </a>
+              <a class="navbar-item is-size-4">
+                Просмотр частных хранилищ
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="navbar-end">
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link is-size-4">
+              Выбор языка
+            </a>
+
+            <div class="navbar-dropdown">
+              <a class="navbar-item is-size-4">
+                Русский язык
+              </a>
+              <a class="navbar-item is-size-4">
+                Английский язык
+              </a>
+            </div>
+          </div>
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="button is-primary">
+                <strong>Sign up</strong>
+              </a>
+              <a class="button is-light">
+                Log in
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container" style="padding-top: 2%">
+      <div class="columns">
+        <div class="content is-normal">
+        <h1>Нейроморфорная система для работы с гетерогенными текстами</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
+        <h2>Second level</h2>
+        <p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
+        <ul>
+          <li>In fermentum leo eu lectus mollis, quis dictum mi aliquet.</li>
+          <li>Morbi eu nulla lobortis, lobortis est in, fringilla felis.</li>
+          <li>Aliquam nec felis in sapien venenatis viverra fermentum nec lectus.</li>
+          <li>Ut non enim metus.</li>
+        </ul>
+      </div>
+      </div>
+    </div>
+  </body>
 </html>
