--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Text</title>
+    <title>RoastBeef Github Pages</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
@@ -11,7 +11,7 @@
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="https://bulma.io">
-          <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.lecker-gekocht.de%2Fwp-content%2Fuploads%2F2021%2F01%2Froastbeef.jpg&f=1&nofb=1&ipt=546c0d79b32949a66ca36942a89286dff1a6a4d1f0b635e128af216422004f00&ipo=images" width="112" height="28">
         </a>
 
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
