--- a/index.html
+++ b/index.html
@@ -63,32 +63,26 @@
               </a>
             </div>
           </div>
-          <div class="navbar-item">
-            <div class="buttons">
-              <a class="button is-primary">
-                <strong>Sign up</strong>
-              </a>
-              <a class="button is-light">
-                Log in
-              </a>
-            </div>
-          </div>
         </div>
       </div>
     </nav>
     <div class="container" style="padding-top: 2%">
       <div class="columns">
         <div class="content is-normal">
-        <h1>Нейроморфорная система для работы с гетерогенными текстами</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
-        <h2>Second level</h2>
-        <p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
-        <ul>
-          <li>In fermentum leo eu lectus mollis, quis dictum mi aliquet.</li>
-          <li>Morbi eu nulla lobortis, lobortis est in, fringilla felis.</li>
-          <li>Aliquam nec felis in sapien venenatis viverra fermentum nec lectus.</li>
-          <li>Ut non enim metus.</li>
-        </ul>
+        <h1>Кулинарная социальная сеть</h1>
+        <p>Ищи рецепты, создавай рецепты, общайся, готовь и получай удовольствие</p>
+        <h2>API</h2>
+        <p>Примеры API endpoints в Swagger</p>
+        <img src="https://i.imgur.com/QaDcCxf.png">
+          <img src="https://i.imgur.com/jGvobM8.png">
+          <img src="https://i.imgur.com/0FPo8QM.png">
+        <h2>Блок схемы</h2>
+        <p>Схема бизнес-процессов</p>
+        <img src="https://i.imgur.com/kZmGFFb.png">
+          <p>Схема вариантов использования</p>
+          <img src="https://i.imgur.com/6D2iMWB.png">
+          <p>Схема базы данных</p>
+          <img src="https://i.imgur.com/xtA3iub.png">
       </div>
       </div>
     </div>
