--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
+        <a class="navbar-item" href="https://fpmi-hci.github.io/proekt12a-bulakhrutkevich/">
           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F24%2Fa4%2F3e%2F24a43e19f8e7019e0cea667d192e22da.jpg&f=1&nofb=1&ipt=d875336154af938046584dc348fafe77ac489c881c9501c066ae3b6a9f11bc47&ipo=images">
         </a>
 
